tests/positive/shebang/input.ci
#!/usr/bin/env cimple
// Shebang line is silently ignored; the rest of the file is normal Cimple.
void main() {
    print("shebang ok\n");
}
