tests/negative/semantic/while_condition_int/input.ci
void main() {
    while (1) { print("x\n"); }
}
